--- a/medicalChatBot/Web.config
+++ b/medicalChatBot/Web.config
@@ -5,10 +5,23 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="ConString"
+		<!--<add name="ConString"
 			 connectionString="Data Source=|DataDirectory|chatbotDB.db;Version=3;Pooling=True;Max Pool Size=100;Journal Mode=WAL;"
-			 providerName="System.Data.SQLite" />
+			 providerName="System.Data.SQLite" />-->
+		<add name="ConString"
+         connectionString="Data Source=|DataDirectory|\chatbotDB.sqlite;Version=3;Cache=Shared;Foreign Keys=True;"
+         providerName="System.Data.SQLite" />
 	</connectionStrings>
+
+	<system.data>
+		<DbProviderFactories>
+			<remove invariant="System.Data.SQLite" />
+			<add name="SQLite Data Provider"
+				 invariant="System.Data.SQLite"
+				 description=".NET Framework Data Provider for SQLite"
+				 type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+		</DbProviderFactories>
+	</system.data>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
